envision.css
/* ... */
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .modal-body p {
    font-size: 12.15px;
  }
}
.greenid-so-content #greenid-container li {
  font-size: 18px;
  line-height: 1.4;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container li {
    font-size: 13.5px;
  }
}
.greenid-so-content #greenid-container strong {
  font-family: 'Lato';
  font-weight: normal;
}
.greenid-so-content #greenid-container label {
  font-size: 14px;
  color: #555;
  font-family: 'Lato';
  font-weight: normal;
  text-transform: capitalize;
  display: block;
  text-align: left;
  margin-bottom: 0;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container label {
    font-size: 12px;
  }
}
.greenid-so-content #greenid-container label .help-block {
  opacity: 0.7;
}
.greenid-so-content #greenid-container input[type='text'],
.greenid-so-content #greenid-container input[type='number'],
.greenid-so-content #greenid-container input[type='date'],
.greenid-so-content #greenid-container input[type='tel'],
.greenid-so-content #greenid-container input[type='email'],
.greenid-so-content #greenid-container input[type='password'],
.greenid-so-content #greenid-container input[type='datetime'],
.greenid-so-content #greenid-container input[type='month'] {
  background: #FFF;
  border: none;
  border-bottom: 1px solid #D7D7DB;
  box-shadow: none;
  border-radius: 0;
  -webkit-appearance: none;
  font-size: 18px;
  font-weight: bolder;
  height: 46px;
  line-height: 0.7;
  cursor: auto;
  padding: 10px 0;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container input[type='text'],
  .greenid-so-content #greenid-container input[type='number'],
  .greenid-so-content #greenid-container input[type='date'],
  .greenid-so-content #greenid-container input[type='tel'],
  .greenid-so-content #greenid-container input[type='email'],
  .greenid-so-content #greenid-container input[type='password'],
  .greenid-so-content #greenid-container input[type='datetime'],
  .greenid-so-content #greenid-container input[type='month'] {
    font-size: 13.5px;
    padding: 11.25px;
  }
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container input[type='text'],
  .greenid-so-content #greenid-container input[type='number'],
  .greenid-so-content #greenid-container input[type='date'],
  .greenid-so-content #greenid-container input[type='tel'],
  .greenid-so-content #greenid-container input[type='email'],
  .greenid-so-content #greenid-container input[type='password'],
  .greenid-so-content #greenid-container input[type='datetime'],
  .greenid-so-content #greenid-container input[type='month'] {
    height: 34.5px;
  }
}
.greenid-so-content #greenid-container textarea {
  background: #FFF;
  border: none;
  border-bottom: 1px solid #D7D7DB;
  box-shadow: none;
  border-radius: 0;
  -webkit-appearance: none;
  font-size: 18px;
  font-weight: bolder;
  padding: 15px;
  padding-top: 10px;
  min-height: 46px;
  line-height: 1.3;
  padding: 10px 0;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container textarea {
    font-size: 13.5px;
    padding: 11.25px;
  }
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container textarea {
    min-height: 34.5px;
    padding-top: 7.5px;
  }
}
.greenid-so-content #greenid-container textarea:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
  border-color: #D7D7DB;
}
.greenid-so-content #greenid-container textarea.greenid-textarea-autoresized {
  resize: none;
  overflow: hidden;
}
.greenid-so-content #greenid-container select {
  height: 46px;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container select {
    height: 34.5px;
  }
}
.greenid-so-content #greenid-container .greenid-so-content-dropcap {
  position: absolute;
  left: -40px;
  top: -13px;
  font-size: 50px;
  font-family: 'Lato';
  font-weight: normal;
  color: #29B7DA;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .greenid-so-content-dropcap {
    font-size: 37.5px;
  }
}
.greenid-so-content #greenid-container .greenid-so-content-dropcap-listitem {
  list-style: none;
  position: relative;
  margin-bottom: 1.5em;
  min-height: 20px;
  text-align: center;
}
.greenid-so-content #greenid-container .greenid-so-content-dropcap-listitem:last-of-type {
  margin-bottom: 0.5em;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .greenid-so-content-dropcap-listitem {
    padding-left: 11.25px;
  }
}
.greenid-so-content #greenid-container .greenid-so-content-image-container {
  text-align: center;
  margin-bottom: 1.5em;
  margin-top: 2.5em;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .greenid-so-content-image-container {
    margin-bottom: 1.125em;
    margin-top: 1.875em;
  }
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .greenid-so-content-image-container img {
    max-width: 100%;
    max-height: 213px;
    width: auto;
    height: auto;
    max-width: 75%;
    max-height: 159.75px;
  }
}
.greenid-so-content #greenid-container .greenid-so-content-heading-logo {
  margin-bottom: 40px;
}
.greenid-so-content #greenid-container .greenid-so-content-select {
  margin: 20px 0 0;
  padding: 0;
  list-style: none;
}
.greenid-so-content #greenid-container .greenid-so-content-select-item {
  background-color: #29B7DA;
  color: white;
  padding: 15px;
  width: 250px;
  font-size: 20px;
  border: none;
  -webkit-border-radius: 0;
  -moz-border-radius: 30px;
  border-radius: 30px;
  margin: 10px auto;
}
.greenid-so-content #greenid-container .greenid-so-content-select-item:active {
  background-color: #0c93b3;
}
@media (max-width: 320px) {
  .greenid-so-content #greenid-container .greenid-so-content-select-item {
    font-size: 12.75px;
    padding: 12.75px 37.5px 11.25px 52.5px;
    background-size: 30px, 17.25px 18px;
  }
}
/* ... */

